# bgr-user-management

./: .env.example  .gitignore  README.md  debug_loga.py  main.py  pyproject.toml  run-offboarding.bat  run-onboarding.bat  test_csv_parsing.py
scripts/: Fix-ProfilePermissions.ps1  fix-perm.ps1
src/: ad_client.py  config.py  email_builder.py  graph_client.py  group_resolver.py  job_title_resolver.py  loga_client.py  models.py  offboarding.py  onboarding.py  ou_resolver.py  smtp_client.py  state_store.py
